--- a/calcu.html
+++ b/calcu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Calculadora</title>
-    <scrip src="./clase2.js" ></scrip>
+    <scrip src="./calcu.js" ></scrip>
 </head>
 <body>
     <h1>Bienvenid@!!</h1>
